[gd_scene load_steps=2 format=3 uid="uid://0eylbqrkfcsh"]

[ext_resource type="Script" path="res://src/components/collider_detector.gd" id="1_r378v"]

[node name="ColliderDetector" type="Area2D"]
script = ExtResource("1_r378v")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
